Release notes
==========================================================

(2013-09-13)

- Now TghSQLConnector class inherit form TghSQLHandler: 
  You can use Script/Params property and Open/Execute method using connector instance directly.
- Many more improvements.
- Version 0.1.8


(2013-05-28)

- The TghSQLEventHandler was fused in TghSQLHandler class.
- New TghSQLHandler.OnException property to catch all exceptions.
- Now TghSQLClient and TghSQLLib classes inherit from TghSQLHandler.
- Now TghSQLTable class inherit form TghSQLClient.
- Deleted TghSQLTable.DataSet property. Instead use Open(DS) method inherit from TghSQLHandler class.


(2013-05-13)

- Renamed GreyhoundLCL package name to GreyhoundExt.


(2013-04-27)

- TghSQLStatement: New ParamsCheck specifies whether the parameters is regenerated when the Script property changes.
- TghSQLClient: Implemented Params support for batch scripts.
- New ghFile unit to work with Files and Directories.


(2013-04-03)

- Started the new version 0.1.6 in dev-0.1.6 branch.
- All names of the units have been modified to use only the prefix "gh" instead of "gh_" to be more Pascal style.


(2013-03-29)

- Now TghSQLTable class inherits from TghSQLHandler.
- New TghSQLEventHandler class inherits from TghSQLHandler.
- Renamed TghSQLConstraint OwnerTable property to just Table.
- Renamed gh_global unit name to gh_classes.
- Version 0.1.4


(2013-03-25)

- Now TghSQLLib inherits from TghSQLHandler.
- Implemented PacketRecords property in TghSQLHandler.
- Now is possible to use t.Script.Text to get a DataSet using your own SQL.
- Using a real version.
- Many more improvements.
- Version 0.1.4


(2013-03-17)

- The Greyhound package was moved to /packages directory.
- Created a new greyhound_zeos package.
- You can make M-N relationship using a sub query in Where method.
- Many more improvements.
- Version 0.1.3


(2013-02-24)

- The gh_pack file was renamed to greyhound (the gh_pack will continue existing some time).