@@ -62,6 +62,7 @@ type
     procedure TestPacketRecords;
     procedure TestUsingScript;
     procedure TestOpenDataSet;
+    procedure TestFindByAlias;
   end;
 
 implementation
@@ -483,6 +484,25 @@ var
 begin
   U := FConn.Tables['user'];
   U.Open(DS, nil);
+  try
+    AssertTrue(DS.Active);
+  finally
+    DS.Free;
+  end;
+end;
+
+procedure TghSQLTableTest.TestFindByAlias;
+var
+  U1, U2: TghSQLTable;
+  DS: TDataSet;
+begin
+  U1 := FConn.Tables['user'];
+  // set an alias
+  U1.Alias := 'u';
+
+  // get the same table instance using the alias (@ is required)
+  U2 := FConn.Tables['@u'];
+  U2.Open(DS, nil);
   try
     AssertTrue(DS.Active);
   finally
